compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__string_prefix_pattern_used_in_guard_assigns_variable.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn go(x) {\n  case x {\n    \"a\" as letter <> rest\n    | \"b\" as letter <> rest if letter == \"c\" -> letter <> rest\n    _ -> \"\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "a" as letter <> rest
    | "b" as letter <> rest if letter == "c" -> letter <> rest
    _ -> ""
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"a"/utf8, Rest/binary>> when ~"a" =:= ~"c" ->
            Letter = ~"a",
            <<Letter/binary, Rest/binary>>;

        <<"b"/utf8, Rest/binary>> when ~"b" =:= ~"c" ->
            Letter = ~"b",
            <<Letter/binary, Rest/binary>>;

        _ ->
            ~""
    end.
