compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__string_prefix_pattern_used_in_guard_assigns_variable_3.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn go(x) {\n  case x {\n    \"a\" as rest <> _\n    | \"b\" <> rest if rest == \"c\" -> Nil\n    _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "a" as rest <> _
    | "b" <> rest if rest == "c" -> Nil
    _ -> Nil
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> nil.
go(X) ->
    case X of
        <<"a"/utf8, _/binary>> when ~"a" =:= ~"c" ->
            Rest = ~"a",
            nil;

        <<"b"/utf8, Rest/binary>> when Rest =:= ~"c" ->
            nil;

        _ ->
            nil
    end.
